# Aksyn-challenge

./: .gitignore  CMakeLists.txt  README.md  api_server.cpp  audio_capture.cpp  audio_capture.h  db_writer.cpp  db_writer.h  node_A.cpp  node_B.cpp  playback.cpp  playback.h  protocol.h  receiver.cpp  receiver.h  session.cpp  session.h  transmitter.cpp  transmitter.h  wav_saver.cpp  wav_saver.h
frontend/aksyn/: README.md  pubspec.yaml
frontend/aksyn/lib/: main.dart
frontend/aksyn/lib/models/: audio_packet.dart  stream_metrics.dart
frontend/aksyn/lib/struct/screens/: dashboard_screen.dart  recordings_screen.dart
frontend/aksyn/lib/struct/services/: audio_stream_service.dart  recordings_service.dart
frontend/aksyn/lib/struct/widgets/: connection_indicator.dart  latency_chart.dart  metric_card.dart
frontend/aksyn/test/: widget_test.dart
